@@ -1,3 +1,8 @@
+1999-03-14 (19:46) Alex Roberts  <bse@dial.pipex.com>
+
+	* commands.c: (file_quit_cb) If user presses cancel on mdi_remove_all, then
+	  we shouldn't close the app! And so, we don't.
+	
 1999-03-14 (19:01) Alex Roberts  <bse@dial.pipex.com>
 
 	* main.h:
